NEXTEUROPA-4507 fixing spacing in political site block in footer
Former-commit-id: ceb7e23a3fc6a3e3f29a22251558e1b4fa61b606

--- a/project/themes/europa/sass/components/_footer.scss
+++ b/project/themes/europa/sass/components/_footer.scss
@@ -176,7 +176,6 @@ a.footer__site-switcher {
     & > * {
       white-space: nowrap;
       display: inline-block;
-      margin-right: 4px;
     }
   }
 }
@@ -199,9 +198,5 @@ a.footer__site-switcher {
 
   a.footer__site-switcher {
     padding-right: 30px !important;
-
-    &:after {
-      margin-left: 0;
-    }
   }
 }
